--- a/src/components/css/header.css
+++ b/src/components/css/header.css
@@ -1,8 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Italianno&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap');
 
 h1{
-    text-align: center;
-    margin: 2.5rem;
-    font-family:'Italianno', cursive;
+    text-align: center!important;
+   padding: 2rem;
+    font-family: 'PT Sans', sans-serif!important;
 }
